feat: enable checkstyle